# iov-vehicle-tbox-sec

./: .dockerignore  .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile.cross  LICENSE  README.md  conanfile.txt  toolchain-aarch64-linux-gnu.cmake
build_check/: CTestTestfile.cmake
build_test/: CTestTestfile.cmake  TboxSecTests
config/: common.yaml  config.dev.yaml  config.yaml  sec.yaml
config/conf.d/: sec.yaml
docs/: api.md  deploy-quickref.md  deployment.md  diagnostic.md  migration-guide.md  tbox-sec-dsn-cr-007-design.md  tbox-sec-dsn-cr-007-plan.md  uds-testing.md
examples/: generate_keys_and_csr.cpp
include/: cert_validator.h  cloud_client.h  constants.h  csr_builder.h  diag_service_interface.h  error_codes.h  hsm_interface.h  ipc_protocol.h  ipc_prov_service.h  ipc_server.h  key_engine.h  prov_service_interface.h  provision_state.h  sec_client.h  sec_service.h  service_dispatcher.h  soft_file_hsm.h  uds_handler.h
profiles/: aarch64-linux-gnu
scripts/: build-local.sh  build.sh  deploy.sh  setup-dev.sh  tbox-sec.service  test_uds.py  uds_simulator.py
src/: cert_validator.cpp  cloud_client.cpp  csr_builder.cpp  diag_service_adapter.cpp  error_codes.cpp  hsm_interface.cpp  ipc_protocol.cpp  ipc_prov_service.cpp  ipc_server.cpp  key_engine.cpp  main.cpp  provision_state.cpp  sec_cli.cpp  sec_client.cpp  sec_service.cpp  secure_storage.cpp  service_dispatcher.cpp  soft_file_hsm.cpp  uds_handler.cpp
tests/: test_cert_validator.cpp  test_config_snapshot.cpp  test_csr_builder.cpp  test_device_identity.cpp  test_diag_service_interface.cpp  test_framework_integration.cpp  test_hsm_interface.cpp  test_key_engine.cpp  test_key_provisioning_mode.cpp  test_sec_service.cpp  test_sec_service_with_diag.cpp  test_seed_key.cpp  test_service_dispatcher.cpp  test_show_csr.cpp  test_soft_file_hsm.cpp  test_subject_dn.cpp  test_uds_handler.cpp
